log/build_2022-09-03_22-06-48/pkg_laser/stderr.log
  File "/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py", line 136
    90graus = 7
      ^
SyntaxError: invalid syntax

